# quant

./: .gitignore  52-week-high.py  CAR3.csv  CAR3.py  CAR3_top10pct.csv  CAR3_top30pct.csv  CLAUDE.md  README.md  SUE.csv  SUE.py  SUE_results.csv  SailingModel.xlsx  TESTSUE.csv  YPF_rolling_sue.csv  cme.xlsx  complete_financial_metrics.py  eps_yoy_debug.csv  financial_metrics_extended.csv  financial_metrics_extended2.csv  herc_portfolio_weights.xlsx  hlc.py  industry_momentum.py  momentum.py  momentum_fip_scores.csv  portfolio.py  pyproject.toml  quantitative_value.csv  qv.py  qv_all_data.csv  skewness.csv  skewness.py  sue_debug_output.csv  test.py  testlow.py  tickers.py  top_10_percent_SUE_per_ticker.csv  vxx.py  yftest.py
.claude/: settings.local.json
atr/: atr.py
bab/: bab.py  bab_betas.xlsx  tickers.py
byma/: mercado argentino (Recuperado).xlsx  mercado argentino.xlsx
car3/: CAR3_top10pct.csv
cfon/: cashflow_resultado.xlsx  rentas.xlsx  weights.xlsx
cme/: CPI.xlsx  ONs.py  bonares.py  bonares_cashflows.xlsx  bonares_cme.xlsx  bonares_precios.xlsx  cash_flows.xlsx  estadisticas_indices.xlsx  indices.xlsx  on.py  on_cashflows.xlsx  on_cme.xlsx  on_precios.xlsx  resultados.py  spy_data_20251002.csv  spy_data_20251002.xlsx  spy_export.py  todo.txt
crypto/: cryptostats.py
data/: ADI.csv  AMGN.csv  B.csv  BA.csv  BBD.csv  BCS.csv  BHP.csv  BMY.csv  BP.csv  CAR.csv  COST.csv  CSCO.csv  CX.csv  DIS.csv  DTEA.csv  GLW.csv  KOF.csv
dynamic_hedge/: backtest_results.csv  dhedging.py  strategy_output.csv
fail_hedge/: full_data_with_indicators.csv  (+1 more)
qv/: qv.py  (+2 more)
(+1051 files in other folders)
